# benchmark

./: .gitignore  .gitmodules
baselines/: Makefile  avx_reducesum_result.csv  avx_sum.cpp  avx_sum.h  avx_sum_cmd.sh  avx_sum_csv.py  avx_sum_grid.py  avx_sum_grid.sh  avx_sum_main.cpp  avx_sum_result.csv  basic_sin.cpp  basic_sin_sam.cpp  benchmark_common.h  benchmark_cpu.h  csv.csv  sleef_playground.cpp  sum.cpp  sum_plain.cpp  tbb_sum.cpp  tbb_sum.h  unary.cpp
baselines/sum_benchs/: build_bench_sum.sh  grid.sh  make_data.cpp  sum.cpp  sum_plain.cpp
benchmarks/: embeddingbag.py  numpy_comp.py  parse_cwrap.py  prod_errors.py  reduce_bench.py  softmax_comp.py  sum_bench.py  sum_comp.py  sum_stress.py  unary_bench.sh  unary_comp.py  unary_comp_dispatch.py
my_dir/: one_off.py  results.csv  results_8.csv  run.sh
timing/cpp/misc/omp_tbb/: CMakeLists.txt  conflict.cpp
